Fixed the double scroll bar on mozilla with windows os;

--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -22,3 +22,14 @@
   border-width: 15px;
   border-color: rgba(38, 71, 137, 1) transparent transparent transparent;
 }
+
+.navbar-fixed {
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    z-index: 10000000;
+    padding-top: 10px;
+}
